err/footprint.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyGithub-1.35.egg-info'...
Listing './lib/python3.5/site-packages/PyJWT-1.5.3.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/footprint'...
Compiling './lib/python3.5/site-packages/footprint/cli.py'...
***   File "./lib/python3.5/site-packages/footprint/cli.py", line 41
    print(f'{header}\n')
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/footprint/modules'...
Compiling './lib/python3.5/site-packages/footprint/modules/github.py'...
***   File "./lib/python3.5/site-packages/footprint/modules/github.py", line 20
    print(f'### {key}\n')
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/footprint/modules/gitlab.py'...
***   File "./lib/python3.5/site-packages/footprint/modules/gitlab.py", line 36
    self.api_entry_point = f'{self.gitlab_url}/api/v4'
                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/footprint-0.0.1.dev0.egg-info'...
Listing './lib/python3.5/site-packages/github'...
Listing './lib/python3.5/site-packages/github/tests'...
Listing './lib/python3.5/site-packages/github/tests/ReplayData'...
Listing './lib/python3.5/site-packages/jwt'...
Listing './lib/python3.5/site-packages/jwt/contrib'...
Listing './lib/python3.5/site-packages/jwt/contrib/algorithms'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
